--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+body{
+  background-color: #2f1d58;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1{
+  margin: 20px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.dropdown{
+ align-items: center;
+ margin: 10px;
+ padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.FlexContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  width: auto;
+  background-color: #2f1d58;
+  height: AUTO;
+  overflow: auto;
+  flex-direction: row;
+  margin: 20px;
+  padding-bottom: 100px;
 }
+.FlexContainer div{
+  width: 300px;
+  height: auto;
+  margin: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: lightblue;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  border: 10px solid white;
+}
+.btn-margin{
+  margin-right: 5px;
+}
+
