--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,8 @@ h1{
   margin: 20px;
   color: white;
 }
-.dropdown{
- align-items: center;
- margin: 10px;
- padding: 10px;
-}
+
+
 
 .FlexContainer{
   display: flex;
@@ -35,7 +32,13 @@ h1{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border: 10px solid white;
 }
+.FlexContainer section{
+   text-align: center;
+ margin: 10px;
+ padding: 10px;
+ width:max-content;
+ background-color: white;
+}
 .btn-margin{
   margin-right: 5px;
 }
-
